--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,3 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: php-actions/composer@v5 # or alternative dependency management
       - uses: php-actions/phpunit@v3
+        with:
+          bootstrap: vendor/autoload.php
+          configuration: tests/phpunit.xml
+          args: --coverage-text
