--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
       - uses: php-actions/composer@v5 # or alternative dependency management
       - uses: php-actions/phpunit@v3
         with:
+          php_extensions: xdebug
           bootstrap: vendor/autoload.php
           configuration: tests/phpunit.xml
           args: --coverage-text
+        env:
+          XDEBUG_MODE: coverage
